[package]
name = "gagerr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
gloo-file = "0.2.3"
log = "0.4.17"
serde = { version = "1.0.138", features = ["derive"] }
wasm-logger = "0.2.0"
web-sys = {version = "0.3.58", features = ["Blob"]}
yew = "0.19.3"
wasm-bindgen = "0.2.81"
